Beta version ended . Public version Begins
Here is my first public version

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="theme-color" content="tomato">
+    <meta name="theme-color" content="rgb(40,50,89)">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>≈Speaking Test</title>
+    <title>Speaking Demo Test</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="home">
         <h1> Speaking Module</h1>
-        <h1 id="timer-display">05:00</h1>
-        <code>developed by tanvir tonoy </code>
+        <h1 id="timer-display">15:00</h1>
+        <code>this website is developed by tanvir tonoy </code>
     </div>
     <div id="BeginTheExam">Start</div>
     <div class="bar">
@@ -48,19 +48,18 @@
         </div>
             <div id="part3">
             <h2>Part 3 : Two Way</h2>
-
-                <ul>
-                    <li>good</li>
-                    <li>better</li>
-                    <li>best</li>
-                </ul>
+                <div class="twoWayQuestions">
+                    <div class="partThree">demo question 1</div>
+                    <div class="partThree">demo question 2</div>
+                    <div class="partThree">demo question 3</div>
+                    <div class="partThree">demo question 4</div>
+                    <div class="partThree">demo question 5</div>
+                    <div class="partThree">demo question 6</div>
+                </div>
                 <!-- Two way discuassion ? :)  -->
             </div>
             <div class="timerSection">
-                <div class="timer">
-                    <div class="disk">
-                       
-                    </div>
+            
                     <div class="controls">
                         <button id="start-button">Start</button>
                         <button id="stop-button">Stop</button>
@@ -69,8 +68,11 @@
                 </div>
             </div>
     </div>
+    <textarea name="note" id="note" cols="30" rows="10">
+        এখানে লিখা যাবে  // Tonoy 😊
+    </textarea>
     <div class="bottom">
-        <a href="tel:+8801844292305" class="callTheDeveloper">Call the Developer</a>
+        <a href="tel:+8801844292305" class="callTheDeveloper" id="call">Call the Developer</a>
     </div>
     <script src="main.js"></script>
 </body>
