oneMinute timers showcase

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </div>
     <div class="parts"> 
         <div id="part1">
+        <h1 id="timer-display">15:00</h1>
             <h2>Part 1 : Introduction</h2>
             <div class="partOne">1. Could you please tell me your full Name please?</div>
             <div class="partOne">2. And what should I call you ? </div>
@@ -36,7 +37,7 @@
         </div>
         <div id="part2">
             <h2>Part 2 : Cue Card</h2>
-
+            <h5>you have <span id="oneMin">60</span> seconds to prepare</h5>
             <!-- cue card -->
             <div class="title" id="Title">cue card title</div>
             <div class="points">
