bug fixing and properly working condition

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     </div>
     <div class="parts"> 
         <div id="part1">
-        <h1 id="timer-display">15:00</h1>
             <h2>Part 1 : Introduction</h2>
             <div class="partOne">1. Could you please tell me your full Name please?</div>
             <div class="partOne">2. And what should I call you ? </div>
@@ -62,6 +61,7 @@
             <div class="timerSection">
             
                     <div class="controls">
+                        <button id="next">Next Part</button>
                         <button id="start-button">Start</button>
                         <button id="stop-button">Stop</button>
                         <button id="reset-button">Reset</button>
